feat: gerenciar catalogo mestre da VJ-81
